Fix launcher not opening client after download
Issues fixed:
1. Version was saved BEFORE download completed - if download failed, version
   was still saved causing re-download loop (versions match but file missing)
2. Download.java had commented-out error handling for HTTP errors and
   content-length failures - now properly aborts on errors
3. Added comprehensive logging throughout download and launch process
4. Utilities.launchClient now verifies JAR exists, uses ProcessBuilder for
   better process management, and checks if process exits immediately
5. Added onComplete callback to Download for saving version AFTER success